--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,5 +33,8 @@
     <url-pattern>*.js</url-pattern>
     <url-pattern>*.jpg</url-pattern>
     <url-pattern>*.png</url-pattern>
+    <url-pattern>*.woff</url-pattern>
+    <url-pattern>*.woff2</url-pattern>
+    <url-pattern>*.ttf</url-pattern>
   </servlet-mapping>
 </web-app>
