--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
-	             /WEB-INF/hibernate-config.xml
+    			 /WEB-INF/application.xml
 	             /WEB-INF/security.xml</param-value>
   </context-param>
   <listener>
